argoproj/tests/nginx/ng-deployment.yaml
# my-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: demo
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: registry.cn-shenzhen.aliyuncs.com/lipaysam/nginx:1.24
          ports:
            - containerPort: 80
