argoproj/tests/nginx/ng-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: demo
  labels:
    app: nginx
spec:
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    app: nginx
